--- a/index.html
+++ b/index.html
@@ -1,13 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Understanding TypeScript</title>
-  <script src="dist/app.js" defer></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Image Overlay Editor</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/fabric"></script>
 </head>
 <body>
-  
+  <canvas id="canvas" width="500" height="500"></canvas>
+
+  <script src="https://cdn.jsdelivr.net/npm/fabric"></script>
+  <script>
+    const canvas = new fabric.Canvas('canvas');
+    fabric.Object.prototype.transparentCorners = false;
+    
+    var greenRect = new fabric.Rect({
+    left: 100,
+    top: 50,
+    width: 100,
+    height: 100,
+    fill: 'green',
+    padding: 10
+  });
+  canvas.add(greenRect);
+
+  fabric.loadSVGFromURL('./images/zoom_background.jpg', function(objects, options) {
+
+      var shape = fabric.util.groupSVGElements(objects, options);
+      canvas.add(shape.scale(0.6));
+      shape.set({ left: 200, top: 100 }).setCoords();
+      canvas.renderAll();
+
+      canvas.forEachObject(function(obj) {
+        var setCoords = obj.setCoords.bind(obj);
+        obj.on({
+          moving: setCoords,
+          scaling: setCoords,
+          rotating: setCoords
+        });
+      })
+});
+
+ 
+    const rect = new fabric.Rect({
+      top: 100,
+      left: 100,
+      width: 60,
+      height: 70,
+      fill: 'red',
+    });
+    canvas.add(rect);
+  </script>
 </body>
 </html>
